--- a/src/views/page2.html
+++ b/src/views/page2.html
@@ -10,15 +10,15 @@
     <div id="barba-wrapper">
         <div class="barba-container">
         <img src="http://dummy-images.com/abstract/dummy-454x280-Stones.jpg" alt="Dummy">
-        <a href="index.html">Page 1</a>
-        <a href="/">Page 2</a>
-        <a href="page3.html">Page 3</a>
+        <a href="/">Page 1</a>
+        <a href="/page2">Page 2</a>
+        <a href="/page3">Page 3</a>
         </div>
     </div>
 
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/barba.js/dist/barba.min.js" type="text/javascript"></script>
-    <script src="./index.js"></script>
+    <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="../assets/js/barba.js" type="text/javascript"></script>
+    <script src="../assets/js/index.js" type="text/javascript"></script>    
 </body>
 </html>
