--- a/src/views/page3.html
+++ b/src/views/page3.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     <title>Test Barba</title>
 </head>
 <body>
     <div id="barba-wrapper">
         <div class="barba-container">
-        <img src="http://dummy-images.com/abstract/dummy-315x560-Mosque.jpg" alt="Dummy">
+        <img src="http://dummy-images.com/abstract/dummy-315x560-Mosque.jpg" data-image alt="Dummy">
         <a href="/">Page 1</a>
         <a href="/page2">Page 2</a>
         <a href="/page3">Page 3</a>
@@ -18,6 +19,7 @@
 
     <script src="../assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="../assets/js/barba.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
     <script src="../assets/js/index.js" type="text/javascript"></script>
 </body>
 </html>
